Fix spacing below summary block on Mobile

--- a/common/app/assets/stylesheets/module/_live-summary.scss
+++ b/common/app/assets/stylesheets/module/_live-summary.scss
@@ -46,7 +46,7 @@
 
 .live-summary__block-clone { // Look like a block
     border-bottom: 2px solid $darkMushroom;
-    padding-bottom: $baseline*3;
+    margin-bottom: $baseline*4;
 }
 
 @include mq(rightCol) {
